test/todo/594.test
; Regression test for issue #594: ExprTests fail if --decimal-comma is specified in ~/.ledgerrc (BZ#594)
; https://github.com/ledger/ledger/issues/594
; When --decimal-comma is active, 'ledger expr' fails because the built-in sample
; journal context uses '.' as decimal separator, which is incompatible with
; decimal-comma mode where '.' is treated as a thousands separator.

2024/01/01 Test
    Expenses:Food    10
    Assets:Cash      -10

test expr --decimal-comma "amount" -> 1
--- Context is first posting of the following transaction ---
2004/05/27 Book Store
    ; This note applies to all postings. :SecondTag:
    Expenses:Books                 20 BOOK @ $10
    ; Metadata: Some Value
    ; Typed:: $100 + $200
    ; :ExampleTag:
    ; Here follows a note describing the posting.
    Liabilities:MasterCard        $-200.00

__ERROR__
While parsing file "", line 8:
While parsing posting:
  Liabilities:MasterCard        $-200.00
                                ^^^^^^^^
Error: Incorrect use of thousand-mark period
end test
